--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+
+<head>
+  <title><%= title %></title>
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+</head>
+
+<body>
+  
+
+  <section class="wrapper">
+    <div id="stars"></div>
+    <div id="stars2"></div>
+    <div id="stars3"></div>
+    <div id="title">
+      <img id="logo" src="/images/logo.4.png" alt="">
+      <h1><span class="span1">you</span>pick</h1>
+      <a href=""><img id="logIn" src="/images/logIn.png" alt=""></a>
+      
+    </div>
+    
+  </section>
+
+</body>
+
 </html>
