--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="mainHTML">
 
 <head>
   <title><%= title %></title>
@@ -7,20 +7,20 @@
 </head>
 
 <body>
-  
-
   <section class="wrapper">
     <div id="stars"></div>
     <div id="stars2"></div>
     <div id="stars3"></div>
     <div id="title">
       <img id="logo" src="/images/logo.4.png" alt="">
-      <h1><span class="span1">you</span>pick</h1>
-      <a href=""><img id="logIn" src="/images/logIn.png" alt=""></a>
-      
+      <div class="logInDiv">
+        <h1><span class="span1">you</span>pick</h1>
+  
+        <a href="/auth/google"><img id="logIn" src="/images/logIn.png" alt=""></a>
+      </div>
     </div>
-    
   </section>
+
 
 </body>
 
