--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,22 +11,30 @@
   width: 35%;
 }
 #title span {
-  background: -webkit-linear-gradient(#A345B2 , #DB44A0 , #EC5B43);
+  /* background: -webkit-linear-gradient(#A345B2 , #DB44A0 , #EC5B43); */
+  background: -webkit-linear-gradient(white,white);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 #title h1 {
   /* margin-top: -6%; */
-  margin-top: -.5%;
+  margin-top: -7%;
   margin-bottom:5%;
-  /* background: -webkit-linear-gradient(white, #38495a); */
-  background: -webkit-linear-gradient(white , rgb(65, 65, 65));
+  background: -webkit-linear-gradient(white,white);
+  text-shadow: 10px 10px 10px;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  border: dashed #A345B2 .5px;
-  border-top-left-radius: 20px;
-  border-bottom-right-radius: 20px;
   padding:0 1% 0.4% 1%;
+}
+.logInDiv{
+  margin-top: 2%;
+  background: rgba(0, 0, 0, 0.294);
+  border: dotted rgb(0, 0, 0) 2px;
+  border-top-left-radius: 50px;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 50px;
+  border-bottom-left-radius: 20px;
+  height: 20%;
 }
 
 
@@ -35,30 +43,21 @@
 
 
 
-
-html {
-  height: 100%;
+body{
+  margin: 0;
+}
+.mainHTML{
+  height: 100vh;
   overflow: hidden;
   background: radial-gradient(ellipse at bottom, #1b2735 0%,#090a0f 100%);
 }
-
 #title {
   font-size: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
-  
 }
-
-#about{
-  top: 10%;
-  visibility: hidden;
-}
-.ab{
-  font-size: 30px;
-}
-
 #stars {
   width: 1px;
   height: 1px;
