--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
 
 <head>
   <title><%= title %></title>
+  <!-- <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"> -->
   <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
 
