--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,7 @@
 <html class="mainHTML">
 
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Raleway+Dots&display=swap" rel="stylesheet">
   <title><%= title %></title>
   <!-- <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"> -->
   <link rel='stylesheet' href='/stylesheets/style.css' />
@@ -15,7 +16,7 @@
     <div id="title">
       <img id="logo" src="/images/logo.4.png" alt="">
       <div class="logInDiv">
-        <h1><span class="span1">you</span>pick</h1>
+        <p class="span1">youpick</p>
   
         <a href="/auth/google"><img id="logIn" src="/images/logIn.png" alt=""></a>
       </div>
