setup comment and like

--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -124,7 +124,7 @@ body{
     box-shadow: gray 3px 3px 3px;
     cursor: pointer;
     top: 3%;
-    left: 8%;
+    left: 8.5%;
     outline: none;
 }
 .addPhoto{
@@ -138,13 +138,20 @@ body{
     border-radius: 50%;
     box-shadow: gray 3px 3px 3px;
     cursor: pointer;
-    top: 11%;
-    left: 6%;
+    top: 12%;
+    left: 7%;
     outline: none;
 }
+.addPhoto:hover , .profileBtn:hover{
+    width: 60px;
+    height: 60px;
+    background-position: 2px 2px;
+    background-size: 50px;
+    transition: 0.1s;
+}
 .global-logedIn-user-avatar{
-    left: 1%;
-    top: 1%;
+    left: 1.1%;
+    top: 2.1%;
     position: absolute;
     display: inline-block;
     width: 100px;
@@ -156,16 +163,21 @@ body{
     border-top-right-radius: 5%;
     border-top-left-radius: 5%;
     background-size: 100px;
+    box-shadow:
+    0 0 0 10px hsl(0, 0%, 80%),
+    0 0 0 15px hsl(0, 0%, 90%);
 }
 
 .global-profile-pic{
     display: inline-block;
     margin-left: 1%;
     margin-top: 1%;
-
     width: 50px;
     height: 50px;
     border-bottom: solid black 1px;
     border-radius: 50%;
     background-size: 50px;
+    box-shadow:
+    0 0 0 5px hsl(0, 0%, 80%),
+    0 0 0 10px hsl(0, 0%, 90%);
 }
