--- a/views/global/show.ejs
+++ b/views/global/show.ejs
@@ -1,48 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel='stylesheet' href='/stylesheets/global.css'/>
+    <link rel='stylesheet' href='/stylesheets/global.css' />
     <title>Document</title>
 </head>
+
 <body>
     <nav class="global-nav">
         <div class="global-logedIn-user-avatar" style="background-image: url('<%= logedInUser.avatar %>');"></div>
-        <a href="/profile"><button class="profileBtn" ></button></a>
-        <a href="/profile/add"><button class="addPhoto" ></button></a>
+        <a href="/profile"><button class="profileBtn"></button></a>
+        <a href="/mkPost/add"><button class="addPhoto"></button></a>
         <!-- <a href="/profile"><button class="profileBtn" ></button></a> -->
     </nav>
-    
+
     <h1>global</h1>
-    
-    
-    <% users.forEach(e => { %>
-        <div class="post">
-                <a href="/users/<%= e._id %>"><div class="global-profile-pic" style="background-image: url('<%= e.avatar %>');"></div></a>
-                <a href="/users/<%= e._id %>"><p><%= e.name %></p></a>
-        
-        <div class="pic">
-            
-        </div>
+    <% posts.forEach(e => { %>
+    <div class="post">
+        <a href="/users/<%= e._id %>">
+            <div class="global-profile-pic" style="background-image: url('<%= e.avatar %>');"></div>
+        </a>
+        <a href="/users/<%= e._id %>">
+            <p><%= e.user.name %></p>
+        </a>
+        <!-- Delete -->
+        <form action="/deletePost/<%=e._id%>?_method=DELETE" method="POST">
+            <button type="submit">DELETE POST</button>
+        </form>
+        <!-- posted image -->
+        <div class="pic"><img src="<%= e.url %>" /></div>
+        <!-- like -->
         <div class="like">
-            
-            <div class="heart">
-                <h1>&hearts;</h1>
-            </div>
+            <form action="/likePost/<%=e._id%>?_method=PUT" method="POST">
+                <div class="heart"><button type="submit" class="likeBtn"></button></div>
+            </form>
         </div>
+        <!-- comment -->
         <div class="commentDiv">
-            <input type="text" class="comment">
-            <button type="submit">&#10095;</button>
+            <form id="commentForm" action="/comment/<%= e._id %>" method="POST">
+                <input type="text" name="comment" class="comment">
+                <button type="submit">&#10095;</button>
+            </form>
         </div>
+
         <select name="" id="commentDrop">
-            
+
         </select>
+
     </div>
-    
-    
+    <form action=""></form>
     <% }) %>
-    
 </body>
+
 </html>
