--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -9,11 +9,8 @@ body{
 }
 .post{
     position: relative;
-    /* display: flex;
-    flex-direction: column;
-    align-items: center; */
     border: solid rgba(0, 58, 120, 0.42) 2px;
-    width: 42%;
+    width: 650px;
     height: 650px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
@@ -27,16 +24,44 @@ body{
     width: 200px;
     display: inline-block;
 }
+.userName{
+    text-decoration: none;
+    color: black;
+    margin-left: 100px;
+    font-size: 20px;
+    position: absolute;
+}
 /* .avatar{
     position: absolute;
     left: 2.5%;
     top: -1%;
 } */
 .pic{
-    margin-top: -1.3%;
+    margin-top: .8%;
     width: 100%;
     height: 500px;
     border: solid rgba(0, 58, 120, 0.42) 1px;
+    text-align: center;
+}
+.pic img{
+    max-width: 650px;
+    max-height: 500px;
+}
+.deleteBtn{
+    position: absolute;
+    top: 1.4%;
+    right: 2%;
+    width: 30px;
+    height: 30px;
+    background-color: rgba(0, 0, 0, 0.404);
+    background-position: 3px 3px;
+    background-size: 40px;
+    background-repeat: no-repeat;
+    border-radius: 50%;
+    box-shadow: rgba(128, 128, 128, 0.246) 3px 3px 3px;
+    cursor: pointer;
+    outline: none;
+    color: white;
 }
 .like{
     bottom: 0;
@@ -51,7 +76,14 @@ body{
     width: 25%;
     height: 11.5%;
     background: radial-gradient(ellipse at bottom, #2f6aad 0%,#090a0f 100%);
+
     /* box-shadow: 5px 5px 10px   rgb(199, 199, 199); */
+}
+.like p{
+    position: absolute;
+    left: 65%;
+    top: -32%;
+    font-size: 40px;
 }
 .heart{
     border: solid rgba(0, 58, 120, 0.42) 1px;
@@ -77,6 +109,8 @@ body{
     border: none;
     background-repeat: no-repeat;
     background-position:10px ;
+    cursor: pointer;
+    outline: none;
 }
 .commentDiv{
     border: solid rgba(0, 58, 120, 0.42)  1px;
@@ -154,6 +188,21 @@ body{
     left: 7%;
     outline: none;
 }
+.logout{
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    background-color: white;
+    background-position: 3px 3px;
+    background-size: 40px;
+    background-repeat: no-repeat;
+    border-radius: 50%;
+    box-shadow: gray 3px 3px 3px;
+    cursor: pointer;
+    top: 15.3%;
+    left: 2%;
+    outline: none;
+}
 .addPhoto:hover , .profileBtn:hover{
     width: 60px;
     height: 60px;
@@ -182,13 +231,15 @@ body{
 
 .global-profile-pic{
     display: inline-block;
-    margin-left: 1%;
-    margin-top: 1%;
-    width: 50px;
-    height: 50px;
+    margin-left: -1%;
+    margin-top: 0%;
+    width: 60px;
+    height: 60px;
     border-bottom: solid black 1px;
     border-radius: 50%;
-    background-size: 50px;
+    background-size: 60px;
+    background-repeat: no-repeat;
+    z-index: 10;
     box-shadow:
     0 0 0 5px hsl(0, 0%, 80%),
     0 0 0 10px hsl(0, 0%, 90%);
