--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -22,3 +22,40 @@ body{
     margin-top: 130px;
     margin-left: -280px;
 }
+.addImgBody{
+    text-align: center;
+    display: flex;
+    justify-content: center;
+}
+.addImgDiv{
+    border: solid black 1px;
+    margin-top: 200px;
+    width: 500px;
+    height: 500px;
+    border-radius: 20px;
+    box-shadow: 10px 10px 10px gray;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.addImgDiv button{
+    width: 70px;
+    height: 40px;
+    margin-top: 5%;
+    /* display: block; */
+    border-radius: 20px;
+}
+.addImgDiv input{
+    margin-top: 10%;
+    margin-left: 50px;
+    max-width: 200px;
+    max-height: 100px;
+    /* display: block; */
+}
+.addImgDiv textarea{
+    margin-top: 10%;
+    width:200px ;
+    height:150px ;
+    max-width: 300px;
+    max-height: 300px;
+}
