--- a/views/global/show.ejs
+++ b/views/global/show.ejs
@@ -33,6 +33,7 @@
             </form>
             <!-- posted image -->
             <div class="pic"><img src="<%= e.url %>" /></div>
+            <div class="likeAndCommentDiv">
             <!-- like -->
             <div class="like">
                     <p><%= e.likes.length %></p>
@@ -40,6 +41,7 @@
                     <div class="heart"><button type="submit" class="likeBtn"></button></div>
                 </form>
             </div>
+            <p class="caption"><%= e.caption %></p>
             <!-- comment -->
             <div class="commentDiv">
                 <form id="commentForm" action="/addComment/<%= e._id %>?_method=PUT" method="POST">
@@ -47,18 +49,19 @@
                     <button type="submit">&#10095;</button>
                 </form>
             </div>
-    
+        </div>
             <!-- <select name="" id="commentDrop">
                
             </select> -->
             <div id="commentDrop">
-                    <%e.comments.forEach(c => {%>
-                        <p><form action="/deleteComment/<%= e._id%>/<%=c._id%>?_method=PUT" method="POST"><button type="submit">X</button></form>&nbsp;<h6><%=c.user%></h6>:&nbsp;<%=c.comment%></p>
+                <%e.comments.forEach(c => {%>
+                <div id="commentDrop-SubDiv">
+                        <form action="/deleteComment/<%= e._id%>/<%=c._id%>?_method=PUT" method="POST"><button type="submit">X</button></form>&nbsp;<p><%=c.user%>:</p>&nbsp;<p><%=c.comment%></p>
+                    </div>
                     <%})%>
             </div>
             
         </div>
-        <form action=""></form>
         <% }) %>
 </body>
 
