--- a/views/mkPost/add.ejs
+++ b/views/mkPost/add.ejs
@@ -11,7 +11,7 @@
     <form action="/post" method="POST" enctype="multipart/form-data">
         <div class="addImgDiv">
             <input type="file" name="image">
-            <textarea type="text" name="caption"></textarea>
+            <textarea type="text" name="caption" maxlength="60"></textarea>
             <button type="submit">add post</button>
 
         </div>
