--- a/views/profiles/show.ejs
+++ b/views/profiles/show.ejs
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel='stylesheet' href='/stylesheets/global.css'/>
     <link rel='stylesheet' href='/stylesheets/profile.css'/>
+    <link rel='stylesheet' href='/stylesheets/global.css'/>
     <title>Document</title>
 </head>
 <body>
     <div class="profileNav">
         <div class="profileAvatar" style="background-image: url('<%= user.avatar %>');"></div>
         <h1 class="profileName"><%= user.name %></h1>
+        <div class="bio">
+            <p><button type="submit">X</button><%= user.bio%></p>
+            <form action="/bio/<%=user._id%>?_method=PUT" method="POST"><input type="text" name="bio"><button type="submit">Submit</button></form>
+        </div>
     </div>
 
 
@@ -22,7 +26,7 @@
             <a href="/users/<%= user._id %>">
                 <div class="global-profile-pic" style="background-image: url('<%= user.avatar %>');"></div>
             </a>
-            <a href="/users/<%= user._id %>">
+            <a class="userName" href="/users/<%= user._id %>">
                 <p><%= user.name %></p>
             </a>
             <!-- Delete -->
@@ -31,39 +35,36 @@
             </form>
             <!-- posted image -->
             <div class="pic"><img src="<%= e.url %>" /></div>
-            <!-- like -->
-            <div class="like">
-                    <p><%= e.likes.length %></p>
-                <form action="/likePost/<%=e._id%>?_method=PUT" method="POST">
-                    <div class="heart"><button type="submit" class="likeBtn"></button></div>
-                </form>
+
+            <div class="likeAndCommentDiv">
+                    <!-- like -->
+                <div class="like">
+                        <p><%= e.likes.length %></p>
+                    <form action="/likePost/<%=e._id%>?_method=PUT" method="POST">
+                        <div class="heart"><button type="submit" class="likeBtn"></button></div>
+                    </form>
+                </div>
+                <p class="caption"><%= e.caption %></p>
+                <!-- comment -->
+                <div class="commentDiv">
+                    <form id="commentForm" action="/addComment/<%= e._id %>?_method=PUT" method="POST">
+                        <input type="text" name="comment" class="comment">
+                        <button type="submit">&#10095;</button>
+                    </form>
+                </div>
             </div>
-            <!-- comment -->
-            <div class="commentDiv">
-                <form id="commentForm" action="/addComment/<%= e._id %>?_method=PUT" method="POST">
-                    <input type="text" name="comment" class="comment">
-                    <button type="submit">&#10095;</button>
-                </form>
-            </div>
-    
-            <!-- <select name="" id="commentDrop">
                
-            </select> -->
+            </select>
             <div id="commentDrop">
                     <%e.comments.forEach(c => {%>
-                        <p><form action="/deleteComment/<%= e._id%>/<%=c._id%>?_method=PUT" method="POST"><button type="submit">X</button></form>&nbsp;<h6><%=c.user%></h6>:&nbsp;<%=c.comment%></p>
-                    <%})%>
-            </div>
+                    <div id="commentDrop-SubDiv">
+                            <form action="/deleteComment/<%= e._id%>/<%=c._id%>?_method=PUT" method="POST"><button type="submit">X</button></form>&nbsp;<p><%=c.user%>:</p>&nbsp;<p><%=c.comment%></p>
+                        </div>
+                        <%})%>
+                </div>
             
         </div>
         <% }) %>
-
-
-
-
-
-
-
 
 </body>
 </html>
