--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -25,6 +25,7 @@ body{
     display: inline-block;
 }
 .userName{
+    font-family: 'Poiret One', cursive;
     text-decoration: none;
     color: black;
     margin-left: 20px;
@@ -32,6 +33,8 @@ body{
     position: absolute;
 }
 .pic{
+    display: flex;
+    justify-content: center;
     margin-top: .8%;
     width: 100%;
     height: 500px;
@@ -48,7 +51,7 @@ body{
     right: 2%;
     width: 30px;
     height: 30px;
-    background-color: rgba(0, 0, 0, 0.404);
+    background-color: rgba(36, 36, 36, 0.404);
     background-position: 3px 3px;
     background-size: 40px;
     background-repeat: no-repeat;
@@ -122,9 +125,6 @@ body{
     border: solid rgba(0, 58, 120, 0.42)  1px;
     position: relative;
     margin-left: 29%;
-    /* margin-top: 5%; */
-    /* bottom: 6%;
-    right: 6%; */
     width:65% ;
     border-radius: 6px;
 }
@@ -138,7 +138,7 @@ body{
     border-radius:4px;
     border-bottom-left-radius: 0px;
     border-top-left-radius: 0px;
-    background: radial-gradient(ellipse at left,#2f6aad 0%,#090a0f 100%);
+    background: radial-gradient(circle at center,#2f6aad 0%,#090a0f 100%);
     font-size: 115%;
     color: white;
     cursor: pointer;
@@ -207,6 +207,9 @@ body{
     outline: none;
 }
 .logout{
+    font-family: 'Poiret One', cursive;
+    font-weight: 900;
+    font-size: 13px;
     position: absolute;
     width: 50px;
     height: 50px;
