--- a/views/global/show.ejs
+++ b/views/global/show.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel='stylesheet' href='/stylesheets/global.css' />
+    <link href="https://fonts.googleapis.com/css?family=Poiret+One&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 
@@ -27,10 +28,11 @@
                 <p><%= e.user.name %></p>
             </a>
             <!-- Delete -->
-            
+            <%if(logedInUser._id==e.user.id){%>
             <form action="/deletePost/<%=e._id%>?_method=DELETE" method="POST">
                 <button class="deleteBtn" type="submit">X</button>
             </form>
+            <%}%>
             <!-- posted image -->
             <div class="pic"><img src="<%= e.url %>" /></div>
             <div class="likeAndCommentDiv">
