--- a/views/profiles/show.ejs
+++ b/views/profiles/show.ejs
@@ -6,15 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel='stylesheet' href='/stylesheets/profile.css'/>
     <link rel='stylesheet' href='/stylesheets/global.css'/>
+    <link href="https://fonts.googleapis.com/css?family=Poiret+One&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
     <div class="profileNav">
         <div class="profileAvatar" style="background-image: url('<%= user.avatar %>');"></div>
         <h1 class="profileName"><%= user.name %></h1>
+        <a href="/global" class="homeBtn">🏠</a>
         <div class="bio">
-            <p><button type="submit">X</button><%= user.bio%></p>
-            <form action="/bio/<%=user._id%>?_method=PUT" method="POST"><input type="text" name="bio"><button type="submit">Submit</button></form>
+            <%if(user.bio==""){%>
+                <form action="/bio/<%=user._id%>?_method=PUT" method="POST"><input type="text" name="bio"><button type="submit">Submit</button></form>
+                <%}else{%>
+                    <form action="/deleteBio/<%=user._id%>?_method=PUT" method="POST"><p><button type="submit">X</button><%= user.bio%></p></form>
+                <%}%>
         </div>
     </div>
 
