--- a/views/global/show.ejs
+++ b/views/global/show.ejs
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel='stylesheet' href='/stylesheets/global.css' />
     <link href="https://fonts.googleapis.com/css?family=Poiret+One&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>global</title>
 </head>
 
 <body>
@@ -17,8 +17,11 @@
         <a href="/mkPost/add"><button class="addPhoto"></button></a>
         <a href="/logout"><button class="logout">Logout</button></a>
     </nav>
-
-    <h1>global</h1>
+    <!-- search -->
+    <div class="input-field">
+            <input id="search" type="search" name="name" placeholder="search name" value="<%= posts.user.name %>" autocomplete="off">
+            <i class="material-icons">close</i>
+          </div>
     <% posts.forEach(e => { %>
         
         <div class="post">
