search problem fixed

--- a/views/global/show.ejs
+++ b/views/global/show.ejs
@@ -18,10 +18,10 @@
         <a href="/logout"><button class="logout">Logout</button></a>
     </nav>
     <!-- search -->
-    <div class="input-field">
-            <input id="search" type="search" name="name" placeholder="search name" value="<%= posts.user.name %>" autocomplete="off">
+    <!-- <div class="input-field">
+            <input id="search" type="search" name="name" placeholder="search name" value="" autocomplete="off">
             <i class="material-icons">close</i>
-          </div>
+          </div> -->
     <% posts.forEach(e => { %>
         
         <div class="post">
