--- a/views/mkPost/add.ejs
+++ b/views/mkPost/add.ejs
@@ -13,8 +13,9 @@
             <input type="file" name="image">
             <textarea type="text" name="caption" maxlength="60"></textarea>
             <button type="submit">add post</button>
-
+            
         </div>
+        <a href="/global" class="home">🏠</a>
     </form>
 </body>
 </html>
