--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -35,11 +35,11 @@ body{
 .pic{
     display: flex;
     justify-content: center;
+    text-align: center;
     margin-top: .8%;
     width: 100%;
     height: 500px;
     border: solid rgba(0, 58, 120, 0.42) 1px;
-    text-align: center;
 }
 .pic img{
     max-width: 650px;
@@ -109,6 +109,20 @@ body{
     width: 60px;
     height: 60px;
     background-image: url('../images/heart.png');
+    background-size: 50px;
+    border: none;
+    background-repeat: no-repeat;
+    background-position:10px ;
+    cursor: pointer;
+    outline: none;
+}
+.redHeart{
+    background-color: transparent;
+    margin-left: -20px;
+    margin-top: 0px;
+    width: 60px;
+    height: 60px;
+    background-image: url('../images/heartRed.png');
     background-size: 50px;
     border: none;
     background-repeat: no-repeat;
